# stitch-cicd

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  env.example  pyproject.toml
.github/rulesets/: main.json
.github/workflows/: admin-check_rulesets.yml  admin-forbidden-patterns.yml  admin.yml  azure-static-web-apps.yml  build-Docker-image-triggers.yml  build-and-deploy.yml  build-and-push-Docker-image.yml  close-ci-environment.yml  close-db.yml  comment-pr-summary.yml  create-jira-on-issue.yml  deploy-api.yml  deploy-container.yml  deploy-db.yml  docker-compose-build.yml  docker-compose-config.yml  docker.yml  node-build.yml  node-format.yml  node-lint.yml  node-test.yml  node.yml  python-build.yml  python-format.yml  python-lint.yml  python-lock-check.yml  python-test.yml  python.yml  run-db-init.yml  run-seed.yml  schema-validate.yml
deployments/api/: API_REFERENCE.md  Dockerfile  Dockerfile.api  README.md  pyproject.toml
deployments/api/scripts/: api_doc.py  check_api_doc.py  gen_api_doc.py  init.sql  init_db.py
deployments/api/src/stitch/api/: auth.py  build_info.py  coalesce.py  dependencies.py  deps.py  entities.py  errors.py  main.py  middleware.py  settings.py  stitch_cli_plugin.py
deployments/api/src/stitch/api/db/: __init__.py  config.py  errors.py  gem_repository.py  init_job.py  merge_candidate_actions.py  model.py  og_field_resource_actions.py  og_field_source_actions.py  query.py  resource_actions.py  resources.py  utils.py
deployments/api/src/stitch/api/db/model/: __init__.py  membership.py  merge_candidate.py  mixins.py  og_field_query_mixin.py  og_field_source_priority.py  oil_gas_field.py  oil_gas_field_source.py  resource.py  resource_coalesced_view.py  sources.py  types.py  user.py
deployments/api/src/stitch/api/db/sources/: models.py
deployments/api/src/stitch/api/ogsi/: entities.py
deployments/api/src/stitch/api/resources/: entities.py
deployments/api/src/stitch/api/routers/: health.py  oil_gas_field_sources.py  oil_gas_fields.py  resources.py
deployments/api/src/stitch/api/routers/resources/: __init__.py  entities.py
deployments/api/tests/: conftest.py  factories.py  test_auth_integration.py  test_auth_unit.py  test_init_job.py  test_merge_candidate_actions.py  test_merge_candidate_preview.py  test_middleware.py  test_openapi.py  utils.py
deployments/api/tests/db/: test_base_query.py  test_config.py  test_query.py  test_resource_actions.py  test_resource_coalesced_view.py  test_settings.py  test_source_actions.py
deployments/api/tests/db/actions/: test_merge.py
deployments/api/tests/routers/: test_query_param_validation.py  test_resources_integration.py  test_resources_unit.py  test_sources_integration.py  test_sources_unit.py
deployments/db/: 00-init-roles.sh  Dockerfile  README.md  seed_db.py
deployments/entity-linkage/: Dockerfile  README.md  pyproject.toml
deployments/entity-linkage/src/stitch/api/: __init__.py  __main__.py  settings.py
deployments/entity-linkage/src/stitch/entity_linkage/: __init__.py  __main__.py  auth.py  client.py  entities.py  main.py  middleware.py  settings.py
deployments/entity-linkage/src/stitch/entity_linkage/routers/: health.py  oil_gas_fields.py  start.py
deployments/entity-linkage/tests/: test_client.py  test_start.py  test_start_api.py
deployments/seed/: Dockerfile  README.md  pyproject.toml
deployments/seed/data/: 001.json  002.json  003-mock-data.json  004-merge-demo.json  static_payloads.json
deployments/seed/src/seed/: __main__.py
deployments/seed/src/stitch/seed/: __main__.py  client.py  config.py  openapi_validate.py  payloads.py
deployments/stitch-frontend/: Dockerfile  PR_286.md  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  vite.config.js  vitest.config.js
deployments/stitch-frontend/mockData/: og_field_resources.json  og_field_views.json
deployments/stitch-frontend/public/: config.json  staticwebapp.config.json
deployments/stitch-frontend/src/: App.jsx  App.test.jsx  AuthGate.jsx  index.css  main.jsx
deployments/stitch-frontend/src/auth/: AuthGate.jsx  AuthGate.test.jsx  api.js  api.test.js
deployments/stitch-frontend/src/components/: Button.jsx  Card.jsx  ClearCacheButton.jsx  ColophonPanel.jsx  ColophonPanel.test.jsx  EnvironmentBanner.jsx  EnvironmentBanner.test.jsx  FetchButton.jsx  FieldCard.jsx  FieldCard.test.jsx  FilterBar.jsx  FilterDropdown.jsx  Input.jsx  JsonView.jsx  LoginPage.jsx  LoginPage.test.jsx  LogoutButton.jsx  LogoutButton.test.jsx  OGFieldView.jsx  OGFieldsList.jsx  OGFieldsView.jsx  Pagination.jsx  ResourceView.jsx  ResourceView.test.jsx  ResourcesList.jsx  ResourcesTable.jsx  ResourcesView.jsx  ResourcesView.test.jsx  SectionHeader.jsx  SourceMixBar.jsx  SourceMixBar.test.jsx
deployments/stitch-frontend/src/config/: env.js  env.test.js  filters.js
deployments/stitch-frontend/src/constants/: fieldMeta.js  sourceMeta.js
deployments/stitch-frontend/src/hooks/: useAuthenticatedQuery.js  useBackendDiagnostics.js  useOGFields.js  useResources.js
deployments/stitch-frontend/src/mockData/: og_field_resources.json
deployments/stitch-frontend/src/pages/: EntityLinkagePage.jsx  HomePage.jsx  MergeCandidateReviewPage.jsx  ResourceDetailPage.jsx  ResourceDetailPage.test.jsx
deployments/stitch-frontend/src/queries/: api.js  api.test.js  ogfields.js  resources.js
deployments/stitch-frontend/src/test/: setup.js  utils.jsx
dev/stitch-cli/: pyproject.toml
dev/stitch-cli/src/stitch/cli/: __init__.py  group.py  hookspecs.py  main.py
dev/stitch-cli/src/stitch_cli/: __init__.py
scripts/: test-package.py
