[project]
name = "stitch-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Michael Barlow", email = "mbarlow@rmi.org" }]
requires-python = ">=3.12.12"
dependencies = [
  "fastapi[standard]>=0.124.0",
  "greenlet>=3.3.0",
  "psycopg[binary]>=3.2.12",
  "pydantic-settings>=2.12.0",
  "sqlalchemy>=2.0.44",
  "stitch-auth",
  "stitch-models",
  "stitch-ogsi",
]

[project.scripts]
stitch-api = "stitch.api.__main__:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stitch.api"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-anyio>=0.0.0",
  "aiosqlite>=0.21.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.uv.sources]
stitch-auth = { workspace = true }
stitch-models = { workspace = true }
stitch-ogsi = { workspace = true }
