[project]
name = "stitch-entity-linkage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Michael Barlow", email = "mbarlow@rmi.org" }]
requires-python = ">=3.12.12"
dependencies = [
  "fastapi[standard]>=0.124.0",
  "pydantic-settings>=2.12.0",
  "stitch-auth",
  "stitch-models",
  "stitch-ogsi",
]

[project.scripts]
stitch-entity-linkage = "stitch.entity_linkage.__main__:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stitch.entity_linkage"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-anyio>=0.0.0",
  "aiosqlite>=0.21.0",
  "httpx>=0.28.0",
  "polyfactory>=3.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.uv.sources]
stitch-auth = { workspace = true }
stitch-models = { workspace = true }
stitch-ogsi = { workspace = true }
