[project]
name = "stitch-seed"
version = "0.1.0"
description = "One-shot seeding client for Stitch API"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
  "faker>=24.0.0",
  "httpx>=0.28.0",
  "jsonschema>=4.23.0",
  "stitch-ogsi",
]

[project.scripts]
stitch-seed = "stitch.seed.__main__:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stitch.seed"

[tool.uv.sources]
stitch-ogsi = { workspace = true }
